// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots App Bar down into tree 1`] = `
<div
  style={
    Object {
      "background": "#ffffff",
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <div
    className="SplitPane  vertical "
    style={
      Object {
        "MozUserSelect": "text",
        "WebkitUserSelect": "text",
        "display": "flex",
        "flex": 1,
        "flexDirection": "row",
        "height": "100%",
        "left": 0,
        "msUserSelect": "text",
        "outline": "none",
        "overflow": "hidden",
        "position": "absolute",
        "right": 0,
        "userSelect": "text",
      }
    }
  >
    <div
      className="Pane vertical Pane1"
      style={
        Object {
          "flex": 1,
          "outline": "none",
          "overflowX": "auto",
          "overflowY": "auto",
          "position": "relative",
        }
      }
    >
      <div>
        <div>
          <div
            className={undefined}
            style={
              Object {
                "WebkitTapHighlightColor": "rgba(0,0,0,0)",
                "backgroundColor": "#00bcd4",
                "borderRadius": "0px",
                "boxShadow": "0 1px 6px rgba(0, 0, 0, 0.12),
                       0 1px 4px rgba(0, 0, 0, 0.12)",
                "boxSizing": "border-box",
                "color": "rgba(0, 0, 0, 0.87)",
                "display": "flex",
                "fontFamily": "Roboto, sans-serif",
                "muiPrepared": true,
                "paddingLeft": 24,
                "paddingRight": 24,
                "position": "relative",
                "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                "width": "100%",
                "zIndex": 1100,
              }
            }
          >
            <div
              style={
                Object {
                  "marginLeft": -16,
                  "marginRight": 8,
                  "marginTop": 8,
                  "muiPrepared": true,
                }
              }
            >
              <button
                disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onMouseOut={[Function]}
                onTouchStart={[Function]}
                style={
                  Object {
                    "WebkitTapHighlightColor": "rgba(0, 0, 0, 0)",
                    "background": "none",
                    "border": 10,
                    "boxSizing": "border-box",
                    "cursor": "pointer",
                    "display": "inline-block",
                    "fontFamily": "Roboto, sans-serif",
                    "fontSize": 0,
                    "fontWeight": "inherit",
                    "height": 48,
                    "margin": 0,
                    "muiPrepared": true,
                    "outline": "none",
                    "overflow": "visible",
                    "padding": 12,
                    "position": "relative",
                    "textDecoration": "none",
                    "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                    "verticalAlign": null,
                    "width": 48,
                  }
                }
                tabIndex={0}
                type="button"
              >
                <div
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                >
                  <svg
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    style={
                      Object {
                        "color": "#ffffff",
                        "display": "inline-block",
                        "fill": "#ffffff",
                        "height": 24,
                        "muiPrepared": true,
                        "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                        "userSelect": "none",
                        "width": 24,
                      }
                    }
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
                    />
                  </svg>
                </div>
              </button>
            </div>
            <div
              onClick={[Function]}
              style={
                Object {
                  "boxFlex": 1,
                  "color": "#ffffff",
                  "flex": "1",
                  "fontSize": 24,
                  "fontWeight": 400,
                  "height": 64,
                  "letterSpacing": 0,
                  "lineHeight": "64px",
                  "margin": 0,
                  "muiPrepared": true,
                  "overflow": "hidden",
                  "paddingTop": 0,
                  "textOverflow": "ellipsis",
                  "whiteSpace": "nowrap",
                }
              }
            >
              <span
                style={
                  Object {
                    "cursor": "pointer",
                  }
                }
              >
                Artstre
              </span>
            </div>
            <div
              style={
                Object {
                  "marginLeft": "auto",
                  "marginRight": -16,
                  "marginTop": 8,
                  "muiPrepared": true,
                }
              }
            >
              <button
                disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onMouseOut={[Function]}
                onTouchStart={[Function]}
                style={
                  Object {
                    "WebkitTapHighlightColor": "rgba(0, 0, 0, 0)",
                    "background": "none",
                    "border": 10,
                    "boxSizing": "border-box",
                    "cursor": "pointer",
                    "display": "inline-block",
                    "fontFamily": "Roboto, sans-serif",
                    "fontSize": 0,
                    "fontWeight": "inherit",
                    "height": 48,
                    "margin": 0,
                    "muiPrepared": true,
                    "outline": "none",
                    "overflow": "visible",
                    "padding": 12,
                    "position": "relative",
                    "textDecoration": "none",
                    "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                    "verticalAlign": null,
                    "width": 48,
                  }
                }
                tabIndex={0}
                type="button"
              >
                <div
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                >
                  <svg
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    style={
                      Object {
                        "color": "#ffffff",
                        "display": "inline-block",
                        "fill": "#ffffff",
                        "height": 24,
                        "muiPrepared": true,
                        "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                        "userSelect": "none",
                        "width": 24,
                      }
                    }
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
                    />
                  </svg>
                </div>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <span
      className="Resizer vertical "
      onClick={[Function]}
      onDoubleClick={[Function]}
      onMouseDown={[Function]}
      onTouchEnd={[Function]}
      onTouchStart={[Function]}
      style={
        Object {
          "cursor": "col-resize",
          "marginRight": -6,
          "width": 10,
          "zIndex": 1,
        }
      }
    />
    <div
      className="Pane vertical Pane2"
      style={
        Object {
          "flex": "none",
          "outline": "none",
          "position": "relative",
          "width": 0,
        }
      }
    >
      <div
        className="sb-addon-material-ui-theme_sidebar"
        style={
          Object {
            "height": "100%",
            "width": "100%",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots App Bar root 1`] = `
<div
  style={
    Object {
      "background": "#ffffff",
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <div
    className="SplitPane  vertical "
    style={
      Object {
        "MozUserSelect": "text",
        "WebkitUserSelect": "text",
        "display": "flex",
        "flex": 1,
        "flexDirection": "row",
        "height": "100%",
        "left": 0,
        "msUserSelect": "text",
        "outline": "none",
        "overflow": "hidden",
        "position": "absolute",
        "right": 0,
        "userSelect": "text",
      }
    }
  >
    <div
      className="Pane vertical Pane1"
      style={
        Object {
          "flex": 1,
          "outline": "none",
          "overflowX": "auto",
          "overflowY": "auto",
          "position": "relative",
        }
      }
    >
      <div>
        <div>
          <div
            className={undefined}
            style={
              Object {
                "WebkitTapHighlightColor": "rgba(0,0,0,0)",
                "backgroundColor": "#00bcd4",
                "borderRadius": "0px",
                "boxShadow": "0 1px 6px rgba(0, 0, 0, 0.12),
                       0 1px 4px rgba(0, 0, 0, 0.12)",
                "boxSizing": "border-box",
                "color": "rgba(0, 0, 0, 0.87)",
                "display": "flex",
                "fontFamily": "Roboto, sans-serif",
                "muiPrepared": true,
                "paddingLeft": 24,
                "paddingRight": 24,
                "position": "relative",
                "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                "width": "100%",
                "zIndex": 1100,
              }
            }
          >
            <div
              style={
                Object {
                  "marginLeft": -16,
                  "marginRight": 8,
                  "marginTop": 8,
                  "muiPrepared": true,
                }
              }
            >
              <button
                disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onMouseOut={[Function]}
                onTouchStart={[Function]}
                style={
                  Object {
                    "WebkitTapHighlightColor": "rgba(0, 0, 0, 0)",
                    "background": "none",
                    "border": 10,
                    "boxSizing": "border-box",
                    "cursor": "pointer",
                    "display": "inline-block",
                    "fontFamily": "Roboto, sans-serif",
                    "fontSize": 0,
                    "fontWeight": "inherit",
                    "height": 48,
                    "margin": 0,
                    "muiPrepared": true,
                    "outline": "none",
                    "overflow": "visible",
                    "padding": 12,
                    "position": "relative",
                    "textDecoration": "none",
                    "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                    "verticalAlign": null,
                    "width": 48,
                  }
                }
                tabIndex={0}
                type="button"
              >
                <div
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                >
                  <svg
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    style={
                      Object {
                        "color": "#ffffff",
                        "display": "inline-block",
                        "fill": "#ffffff",
                        "height": 24,
                        "muiPrepared": true,
                        "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                        "userSelect": "none",
                        "width": 24,
                      }
                    }
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
                    />
                  </svg>
                </div>
              </button>
            </div>
            <div
              onClick={[Function]}
              style={
                Object {
                  "boxFlex": 1,
                  "color": "#ffffff",
                  "flex": "1",
                  "fontSize": 24,
                  "fontWeight": 400,
                  "height": 64,
                  "letterSpacing": 0,
                  "lineHeight": "64px",
                  "margin": 0,
                  "muiPrepared": true,
                  "overflow": "hidden",
                  "paddingTop": 0,
                  "textOverflow": "ellipsis",
                  "whiteSpace": "nowrap",
                }
              }
            >
              <span
                style={
                  Object {
                    "cursor": "pointer",
                  }
                }
              >
                Artstre
              </span>
            </div>
            <div
              style={
                Object {
                  "marginLeft": "auto",
                  "marginRight": -16,
                  "marginTop": 8,
                  "muiPrepared": true,
                }
              }
            >
              <button
                disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onMouseOut={[Function]}
                onTouchStart={[Function]}
                style={
                  Object {
                    "WebkitTapHighlightColor": "rgba(0, 0, 0, 0)",
                    "background": "none",
                    "border": 10,
                    "boxSizing": "border-box",
                    "cursor": "pointer",
                    "display": "inline-block",
                    "fontFamily": "Roboto, sans-serif",
                    "fontSize": 0,
                    "fontWeight": "inherit",
                    "height": 48,
                    "margin": 0,
                    "muiPrepared": true,
                    "outline": "none",
                    "overflow": "visible",
                    "padding": 12,
                    "position": "relative",
                    "textDecoration": "none",
                    "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                    "verticalAlign": null,
                    "width": 48,
                  }
                }
                tabIndex={0}
                type="button"
              >
                <div
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                >
                  <svg
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    style={
                      Object {
                        "color": "#ffffff",
                        "display": "inline-block",
                        "fill": "#ffffff",
                        "height": 24,
                        "muiPrepared": true,
                        "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                        "userSelect": "none",
                        "width": 24,
                      }
                    }
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
                    />
                  </svg>
                </div>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <span
      className="Resizer vertical "
      onClick={[Function]}
      onDoubleClick={[Function]}
      onMouseDown={[Function]}
      onTouchEnd={[Function]}
      onTouchStart={[Function]}
      style={
        Object {
          "cursor": "col-resize",
          "marginRight": -6,
          "width": 10,
          "zIndex": 1,
        }
      }
    />
    <div
      className="Pane vertical Pane2"
      style={
        Object {
          "flex": "none",
          "outline": "none",
          "position": "relative",
          "width": 0,
        }
      }
    >
      <div
        className="sb-addon-material-ui-theme_sidebar"
        style={
          Object {
            "height": "100%",
            "width": "100%",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Map alt 1`] = `
<div
  style={
    Object {
      "height": 1552,
      "width": 1237,
    }
  }
>
  <h3>
    Taxon #
    0
    : range 
    0
    -
    20000
  </h3>
  <canvas
    id="map-canvas"
    style={
      Object {
        "height": "100%",
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`Storyshots Map dekkfrøete <200m ASL 1`] = `
<div
  style={
    Object {
      "height": 1552,
      "width": 1237,
    }
  }
>
  <h3>
    Taxon #
    1281
    : range 
    0
    -
    200
  </h3>
  <canvas
    id="map-canvas"
    style={
      Object {
        "height": "100%",
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`Storyshots Map dekkfrøete >400m ASL 1`] = `
<div
  style={
    Object {
      "height": 1552,
      "width": 1237,
    }
  }
>
  <h3>
    Taxon #
    1281
    : range 
    400
    -
    20000
  </h3>
  <canvas
    id="map-canvas"
    style={
      Object {
        "height": "100%",
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`Storyshots Taxon Card default 1`] = `
<div
  style={
    Object {
      "background": "#ffffff",
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <div
    className="SplitPane  vertical "
    style={
      Object {
        "MozUserSelect": "text",
        "WebkitUserSelect": "text",
        "display": "flex",
        "flex": 1,
        "flexDirection": "row",
        "height": "100%",
        "left": 0,
        "msUserSelect": "text",
        "outline": "none",
        "overflow": "hidden",
        "position": "absolute",
        "right": 0,
        "userSelect": "text",
      }
    }
  >
    <div
      className="Pane vertical Pane1"
      style={
        Object {
          "flex": 1,
          "outline": "none",
          "overflowX": "auto",
          "overflowY": "auto",
          "position": "relative",
        }
      }
    >
      <div>
        <div
          style={
            Object {
              "WebkitTapHighlightColor": "rgba(0,0,0,0)",
              "backgroundColor": "#ffffff",
              "borderRadius": 2,
              "boxShadow": "0 1px 6px rgba(0, 0, 0, 0.12),
                     0 1px 4px rgba(0, 0, 0, 0.12)",
              "boxSizing": "border-box",
              "color": "rgba(0, 0, 0, 0.87)",
              "fontFamily": "Roboto, sans-serif",
              "muiPrepared": true,
              "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
              "zIndex": 1,
            }
          }
        >
          <div
            style={
              Object {
                "paddingBottom": 0,
              }
            }
          >
            <div
              style={
                Object {
                  "muiPrepared": true,
                  "position": "relative",
                }
              }
            >
              <div
                style={
                  Object {
                    "muiPrepared": true,
                  }
                }
              >
                <img
                  alt=""
                  src="http://nodeyoda.westeurope.cloudapp.azure.com/taxonPhoto/196.jpg"
                  style={
                    Object {
                      "maxWidth": "100%",
                      "minWidth": "100%",
                      "muiPrepared": true,
                      "verticalAlign": "top",
                      "width": "100%",
                    }
                  }
                />
              </div>
              <div
                style={
                  Object {
                    "bottom": 0,
                    "left": 0,
                    "muiPrepared": true,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  }
                }
              >
                <div
                  style={
                    Object {
                      "height": "100%",
                      "muiPrepared": true,
                      "position": "relative",
                    }
                  }
                >
                  <div
                    style={
                      Object {
                        "background": "rgba(0, 0, 0, 0.54)",
                        "bottom": 0,
                        "left": 0,
                        "muiPrepared": true,
                        "paddingTop": 8,
                        "position": "absolute",
                        "right": 0,
                      }
                    }
                  >
                    <div
                      style={
                        Object {
                          "muiPrepared": true,
                          "padding": 16,
                          "position": "relative",
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "color": "rgba(255, 255, 255, 0.87)",
                            "display": "block",
                            "fontSize": 24,
                            "lineHeight": "36px",
                            "muiPrepared": true,
                          }
                        }
                      >
                        Vitenskapelig navn
                      </span>
                      <span
                        style={
                          Object {
                            "color": "rgba(255, 255, 255, 0.54)",
                            "display": "block",
                            "fontSize": 14,
                            "muiPrepared": true,
                          }
                        }
                      >
                        Populærnavn
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              style={
                Object {
                  "muiPrepared": true,
                  "padding": 8,
                  "position": "relative",
                }
              }
            >
              <button
                disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onTouchStart={[Function]}
                style={
                  Object {
                    "WebkitTapHighlightColor": "rgba(0, 0, 0, 0)",
                    "backgroundColor": "rgba(0, 0, 0, 0)",
                    "border": 10,
                    "borderRadius": 2,
                    "boxSizing": "border-box",
                    "color": "rgba(0, 0, 0, 0.87)",
                    "cursor": "pointer",
                    "display": "inline-block",
                    "fontFamily": "Roboto, sans-serif",
                    "fontSize": "inherit",
                    "fontWeight": "inherit",
                    "height": 36,
                    "lineHeight": "36px",
                    "margin": 0,
                    "marginRight": 8,
                    "minWidth": 88,
                    "muiPrepared": true,
                    "outline": "none",
                    "overflow": "hidden",
                    "padding": 0,
                    "position": "relative",
                    "textAlign": "center",
                    "textDecoration": "none",
                    "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                    "userSelect": "none",
                    "verticalAlign": null,
                  }
                }
                tabIndex={0}
                type="button"
              >
                <div
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                >
                  <span
                    style={
                      Object {
                        "fontSize": 14,
                        "fontWeight": 500,
                        "letterSpacing": 0,
                        "muiPrepared": true,
                        "paddingLeft": 16,
                        "paddingRight": 16,
                        "position": "relative",
                        "textTransform": "uppercase",
                        "verticalAlign": "middle",
                      }
                    }
                  >
                    Action1
                  </span>
                </div>
              </button>
              <button
                disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onTouchStart={[Function]}
                style={
                  Object {
                    "WebkitTapHighlightColor": "rgba(0, 0, 0, 0)",
                    "backgroundColor": "rgba(0, 0, 0, 0)",
                    "border": 10,
                    "borderRadius": 2,
                    "boxSizing": "border-box",
                    "color": "rgba(0, 0, 0, 0.87)",
                    "cursor": "pointer",
                    "display": "inline-block",
                    "fontFamily": "Roboto, sans-serif",
                    "fontSize": "inherit",
                    "fontWeight": "inherit",
                    "height": 36,
                    "lineHeight": "36px",
                    "margin": 0,
                    "marginRight": 8,
                    "minWidth": 88,
                    "muiPrepared": true,
                    "outline": "none",
                    "overflow": "hidden",
                    "padding": 0,
                    "position": "relative",
                    "textAlign": "center",
                    "textDecoration": "none",
                    "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                    "userSelect": "none",
                    "verticalAlign": null,
                  }
                }
                tabIndex={0}
                type="button"
              >
                <div
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                >
                  <span
                    style={
                      Object {
                        "fontSize": 14,
                        "fontWeight": 500,
                        "letterSpacing": 0,
                        "muiPrepared": true,
                        "paddingLeft": 16,
                        "paddingRight": 16,
                        "position": "relative",
                        "textTransform": "uppercase",
                        "verticalAlign": "middle",
                      }
                    }
                  >
                    Action2
                  </span>
                </div>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <span
      className="Resizer vertical "
      onClick={[Function]}
      onDoubleClick={[Function]}
      onMouseDown={[Function]}
      onTouchEnd={[Function]}
      onTouchStart={[Function]}
      style={
        Object {
          "cursor": "col-resize",
          "marginRight": -6,
          "width": 10,
          "zIndex": 1,
        }
      }
    />
    <div
      className="Pane vertical Pane2"
      style={
        Object {
          "flex": "none",
          "outline": "none",
          "position": "relative",
          "width": 0,
        }
      }
    >
      <div
        className="sb-addon-material-ui-theme_sidebar"
        style={
          Object {
            "height": "100%",
            "width": "100%",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Taxon Locations default 1`] = `
<div
  style={
    Object {
      "background": "#ffffff",
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <div
    className="SplitPane  vertical "
    style={
      Object {
        "MozUserSelect": "text",
        "WebkitUserSelect": "text",
        "display": "flex",
        "flex": 1,
        "flexDirection": "row",
        "height": "100%",
        "left": 0,
        "msUserSelect": "text",
        "outline": "none",
        "overflow": "hidden",
        "position": "absolute",
        "right": 0,
        "userSelect": "text",
      }
    }
  >
    <div
      className="Pane vertical Pane1"
      style={
        Object {
          "flex": 1,
          "outline": "none",
          "overflowX": "auto",
          "overflowY": "auto",
          "position": "relative",
        }
      }
    >
      <div>
        <div
          style={
            Object {
              "WebkitTapHighlightColor": "rgba(0,0,0,0)",
              "backgroundColor": "#ffffff",
              "borderRadius": 2,
              "boxShadow": "0 1px 6px rgba(0, 0, 0, 0.12),
                     0 1px 4px rgba(0, 0, 0, 0.12)",
              "boxSizing": "border-box",
              "color": "rgba(0, 0, 0, 0.87)",
              "fontFamily": "Roboto, sans-serif",
              "muiPrepared": true,
              "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
              "zIndex": 1,
            }
          }
        >
          <div
            style={
              Object {
                "paddingBottom": 0,
              }
            }
          >
            <div
              style={
                Object {
                  "boxSizing": "border-box",
                  "fontWeight": 500,
                  "muiPrepared": true,
                  "padding": 16,
                  "position": "relative",
                  "whiteSpace": "nowrap",
                }
              }
            >
              <div
                style={
                  Object {
                    "display": "inline-block",
                    "muiPrepared": true,
                    "paddingRight": "90px",
                    "verticalAlign": "top",
                    "whiteSpace": "normal",
                  }
                }
              >
                <span
                  style={
                    Object {
                      "color": "rgba(0, 0, 0, 0.87)",
                      "display": "block",
                      "fontSize": 15,
                      "muiPrepared": true,
                    }
                  }
                >
                  Utbredelse (mock)
                </span>
                <span
                  style={
                    Object {
                      "color": "rgba(0, 0, 0, 0.54)",
                      "display": "block",
                      "fontSize": 14,
                      "muiPrepared": true,
                    }
                  }
                >
                  basert på observasjoner
                </span>
              </div>
            </div>
            <div
              style={
                Object {
                  "muiPrepared": true,
                  "position": "relative",
                }
              }
            >
              <div
                style={
                  Object {
                    "muiPrepared": true,
                  }
                }
              >
                <img
                  alt=""
                  src="http://nodeyoda.westeurope.cloudapp.azure.com/observation/undefined.png"
                  style={
                    Object {
                      "maxWidth": "100%",
                      "minWidth": "100%",
                      "muiPrepared": true,
                      "verticalAlign": "top",
                      "width": "100%",
                    }
                  }
                />
              </div>
              
            </div>
          </div>
        </div>
      </div>
    </div>
    <span
      className="Resizer vertical "
      onClick={[Function]}
      onDoubleClick={[Function]}
      onMouseDown={[Function]}
      onTouchEnd={[Function]}
      onTouchStart={[Function]}
      style={
        Object {
          "cursor": "col-resize",
          "marginRight": -6,
          "width": 10,
          "zIndex": 1,
        }
      }
    />
    <div
      className="Pane vertical Pane2"
      style={
        Object {
          "flex": "none",
          "outline": "none",
          "position": "relative",
          "width": 0,
        }
      }
    >
      <div
        className="sb-addon-material-ui-theme_sidebar"
        style={
          Object {
            "height": "100%",
            "width": "100%",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Taxon Search default 1`] = `
<div
  style={
    Object {
      "background": "#ffffff",
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <div
    className="SplitPane  vertical "
    style={
      Object {
        "MozUserSelect": "text",
        "WebkitUserSelect": "text",
        "display": "flex",
        "flex": 1,
        "flexDirection": "row",
        "height": "100%",
        "left": 0,
        "msUserSelect": "text",
        "outline": "none",
        "overflow": "hidden",
        "position": "absolute",
        "right": 0,
        "userSelect": "text",
      }
    }
  >
    <div
      className="Pane vertical Pane1"
      style={
        Object {
          "flex": 1,
          "outline": "none",
          "overflowX": "auto",
          "overflowY": "auto",
          "position": "relative",
        }
      }
    >
      <div>
        <div
          style={
            Object {
              "display": "inline-block",
              "muiPrepared": true,
              "position": "relative",
              "width": "100%",
            }
          }
        >
          <div
            className={undefined}
            style={
              Object {
                "backgroundColor": "transparent",
                "cursor": "auto",
                "display": "inline-block",
                "fontFamily": "Roboto, sans-serif",
                "fontSize": 16,
                "height": 72,
                "lineHeight": "24px",
                "muiPrepared": true,
                "position": "relative",
                "transition": "height 200ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                "width": "100%",
              }
            }
          >
            <label
              className={undefined}
              htmlFor="1"
              onClick={undefined}
              style={
                Object {
                  "color": "rgba(0, 0, 0, 0.3)",
                  "lineHeight": "22px",
                  "muiPrepared": true,
                  "pointerEvents": "none",
                  "position": "absolute",
                  "top": 38,
                  "transform": "scale(1) translate(0, 0)",
                  "transformOrigin": "left top",
                  "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                  "userSelect": "none",
                  "zIndex": 1,
                }
              }
            >
              Søk på takson
            </label>
            <div
              style={
                Object {
                  "bottom": 12,
                  "color": "rgba(0, 0, 0, 0.3)",
                  "muiPrepared": true,
                  "opacity": 0,
                  "position": "absolute",
                  "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                }
              }
            >
              Søk på vitenskapelig navn
            </div>
            <input
              autoComplete="off"
              autoFocus={true}
              disabled={false}
              id="1"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              open={false}
              style={
                Object {
                  "WebkitOpacity": 1,
                  "WebkitTapHighlightColor": "rgba(0,0,0,0)",
                  "appearance": "textfield",
                  "backgroundColor": "rgba(0,0,0,0)",
                  "border": "none",
                  "boxSizing": "border-box",
                  "color": "rgba(0, 0, 0, 0.87)",
                  "cursor": "inherit",
                  "font": "inherit",
                  "height": "100%",
                  "marginTop": 14,
                  "muiPrepared": true,
                  "outline": "none",
                  "padding": 0,
                  "position": "relative",
                  "width": "100%",
                }
              }
              type="text"
              value=""
            />
            <div>
              <hr
                aria-hidden="true"
                style={
                  Object {
                    "borderBottomStyle": "solid",
                    "borderBottomWidth": 1,
                    "borderColor": "#e0e0e0",
                    "borderLeft": "none",
                    "borderRight": "none",
                    "borderTop": "none",
                    "bottom": 8,
                    "boxSizing": "content-box",
                    "margin": 0,
                    "muiPrepared": true,
                    "position": "absolute",
                    "width": "100%",
                  }
                }
              />
              <hr
                aria-hidden="true"
                style={
                  Object {
                    "borderBottomStyle": "solid",
                    "borderBottomWidth": 2,
                    "borderColor": "#00bcd4",
                    "borderLeft": "none",
                    "borderRight": "none",
                    "borderTop": "none",
                    "bottom": 8,
                    "boxSizing": "content-box",
                    "margin": 0,
                    "muiPrepared": true,
                    "position": "absolute",
                    "transform": "scaleX(0)",
                    "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                    "width": "100%",
                  }
                }
              />
            </div>
          </div>
          <div
            style={
              Object {
                "display": "none",
              }
            }
          />
        </div>
      </div>
    </div>
    <span
      className="Resizer vertical "
      onClick={[Function]}
      onDoubleClick={[Function]}
      onMouseDown={[Function]}
      onTouchEnd={[Function]}
      onTouchStart={[Function]}
      style={
        Object {
          "cursor": "col-resize",
          "marginRight": -6,
          "width": 10,
          "zIndex": 1,
        }
      }
    />
    <div
      className="Pane vertical Pane2"
      style={
        Object {
          "flex": "none",
          "outline": "none",
          "position": "relative",
          "width": 0,
        }
      }
    >
      <div
        className="sb-addon-material-ui-theme_sidebar"
        style={
          Object {
            "height": "100%",
            "width": "100%",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Taxon Tree default 1`] = `
<div
  style={
    Object {
      "background": "#ffffff",
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <div
    className="SplitPane  vertical "
    style={
      Object {
        "MozUserSelect": "text",
        "WebkitUserSelect": "text",
        "display": "flex",
        "flex": 1,
        "flexDirection": "row",
        "height": "100%",
        "left": 0,
        "msUserSelect": "text",
        "outline": "none",
        "overflow": "hidden",
        "position": "absolute",
        "right": 0,
        "userSelect": "text",
      }
    }
  >
    <div
      className="Pane vertical Pane1"
      style={
        Object {
          "flex": 1,
          "outline": "none",
          "overflowX": "auto",
          "overflowY": "auto",
          "position": "relative",
        }
      }
    >
      <div>
        <div
          style={
            Object {
              "muiPrepared": true,
              "padding": "8px 0px 8px 0px",
            }
          }
        >
          <div>
            <span
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onTouchEnd={[Function]}
              onTouchStart={[Function]}
              open={null}
              style={
                Object {
                  "WebkitTapHighlightColor": "rgba(0, 0, 0, 0)",
                  "background": "none",
                  "backgroundColor": null,
                  "border": 10,
                  "boxSizing": "border-box",
                  "color": "rgba(0, 0, 0, 0.87)",
                  "cursor": "pointer",
                  "display": "block",
                  "fontFamily": "Roboto, sans-serif",
                  "fontSize": 16,
                  "fontWeight": "inherit",
                  "lineHeight": "16px",
                  "margin": 0,
                  "muiPrepared": true,
                  "outline": "none",
                  "padding": 0,
                  "position": "relative",
                  "textDecoration": "none",
                  "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                  "verticalAlign": null,
                }
              }
              tabIndex={0}
            >
              <div
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
              >
                <div
                  style={
                    Object {
                      "marginLeft": 0,
                      "muiPrepared": true,
                      "paddingBottom": 16,
                      "paddingLeft": 72,
                      "paddingRight": 56,
                      "paddingTop": 20,
                      "position": "relative",
                    }
                  }
                >
                  <div
                    className={undefined}
                    size={40}
                    style={
                      Object {
                        "alignItems": "center",
                        "backgroundColor": "rgb(188, 188, 188)",
                        "borderRadius": "50%",
                        "color": "#ffffff",
                        "display": "inline-flex",
                        "fontSize": 20,
                        "height": 40,
                        "justifyContent": "center",
                        "left": 16,
                        "muiPrepared": true,
                        "position": "absolute",
                        "top": 16,
                        "userSelect": "none",
                        "width": 40,
                      }
                    }
                  >
                    <svg
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      style={
                        Object {
                          "color": "#ffffff",
                          "display": "inline-block",
                          "fill": "#ffffff",
                          "fontSize": 24,
                          "height": 24,
                          "margin": 8,
                          "muiPrepared": true,
                          "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                          "userSelect": "none",
                          "width": 24,
                        }
                      }
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M10 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V8c0-1.1-.9-2-2-2h-8l-2-2z"
                      />
                    </svg>
                  </div>
                  <div
                    className={undefined}
                    disabled={undefined}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchStart={[Function]}
                    style={
                      Object {
                        "WebkitTapHighlightColor": "rgba(0, 0, 0, 0)",
                        "backgroundColor": "rgb(224, 224, 224)",
                        "border": 10,
                        "borderRadius": 16,
                        "boxShadow": null,
                        "boxSizing": "border-box",
                        "cursor": "pointer",
                        "display": "block",
                        "fontFamily": "Roboto, sans-serif",
                        "fontSize": "inherit",
                        "fontWeight": "inherit",
                        "margin": 0,
                        "muiPrepared": true,
                        "outline": "none",
                        "padding": 0,
                        "position": "absolute",
                        "right": 4,
                        "textDecoration": "none",
                        "top": 12,
                        "verticalAlign": null,
                        "whiteSpace": "nowrap",
                        "width": "fit-content",
                      }
                    }
                    tabIndex={0}
                  >
                    <span
                      style={
                        Object {
                          "color": "rgba(0, 0, 0, 0.87)",
                          "fontSize": 14,
                          "fontWeight": 400,
                          "lineHeight": "32px",
                          "muiPrepared": true,
                          "paddingLeft": 12,
                          "paddingRight": 12,
                          "userSelect": "none",
                          "whiteSpace": "nowrap",
                        }
                      }
                    >
                      18588919
                    </span>
                  </div>
                  <div
                    style={
                      Object {
                        "muiPrepared": true,
                      }
                    }
                  >
                    Animalia
                  </div>
                  <div
                    style={
                      Object {
                        "WebkitBoxOrient": null,
                        "WebkitLineClamp": null,
                        "color": "rgba(0, 0, 0, 0.54)",
                        "display": null,
                        "fontSize": 14,
                        "height": 16,
                        "lineHeight": "16px",
                        "margin": 0,
                        "marginTop": 4,
                        "muiPrepared": true,
                        "overflow": "hidden",
                        "textOverflow": "ellipsis",
                        "whiteSpace": "nowrap",
                      }
                    }
                  >
                    dyreriket
                  </div>
                </div>
              </div>
            </span>
          </div>
        </div>
      </div>
    </div>
    <span
      className="Resizer vertical "
      onClick={[Function]}
      onDoubleClick={[Function]}
      onMouseDown={[Function]}
      onTouchEnd={[Function]}
      onTouchStart={[Function]}
      style={
        Object {
          "cursor": "col-resize",
          "marginRight": -6,
          "width": 10,
          "zIndex": 1,
        }
      }
    />
    <div
      className="Pane vertical Pane2"
      style={
        Object {
          "flex": "none",
          "outline": "none",
          "position": "relative",
          "width": 0,
        }
      }
    >
      <div
        className="sb-addon-material-ui-theme_sidebar"
        style={
          Object {
            "height": "100%",
            "width": "100%",
          }
        }
      />
    </div>
  </div>
</div>
`;
